--- a/app/src/main/res/layout/activity_device_interaction.xml
+++ b/app/src/main/res/layout/activity_device_interaction.xml
@@ -21,8 +21,17 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/device_interaction_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </android.support.design.widget.AppBarLayout>
 
-    <include android:id="@+id/content_device_interaction" layout="@layout/content_device_interaction"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/device_interaction_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
