--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,19 +25,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        card_view:cardElevation="28dp"
+        card_view:cardElevation="26dp"
         card_view:cardCornerRadius="0dp"
         android:padding="16dp"
         android:layout_alignParentTop="false"
         android:layout_alignWithParentIfMissing="false"
         android:layout_margin="16dp">
 
-        <Button
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/do_device_discovery"
-            android:id="@+id/btn_discovery"
-            android:background="?android:attr/selectableItemBackground"/>
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryLight">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/do_device_discovery"
+                android:textAppearance="?android:attr/textAppearanceLargeInverse"
+                android:id="@+id/btn_discovery"
+                android:background="?android:attr/selectableItemBackground"/>
+
+        </FrameLayout>
 
     </android.support.v7.widget.CardView>
 
