Tidied up the interaction activity through separation of concerns. Started work on a simple notification service that will be used later when "system controls" view page is implemented

--- a/app/src/main/res/layout/content_device_interaction_mouse.xml
+++ b/app/src/main/res/layout/content_device_interaction_mouse.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,51 +11,42 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.deviceinteraction.DeviceInteractionActivity"
-    tools:showIn="@layout/activity_device_interaction"
     android:orientation="vertical"
     android:id="@+id/content_device_interaction_mouse">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/received_data_text"
-        android:paddingBottom="@dimen/default_padding"/>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/touchpad_area"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/interaction"
+            android:layout_above="@+id/keyboard">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/received_data_text"
+                android:paddingBottom="@dimen/default_padding"/>
 
-    <!--<LinearLayout-->
-        <!--android:orientation="horizontal"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/btn_controls"-->
-        <!--android:weightSum="10">-->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/touchpad_area"/>
+        </LinearLayout>
 
-        <!--<Button-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Left C"-->
-            <!--android:id="@+id/left_click_button"-->
-            <!--android:layout_weight="4"/>-->
+        <LinearLayout
+            android:id="@+id/keyboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            >
 
-        <!--<Button-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Middle"-->
-            <!--android:id="@+id/middle_click_button"-->
-            <!--android:layout_weight="2"/>-->
-
-        <!--<Button-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Right C"-->
-            <!--android:id="@+id/right_click_button"-->
-            <!--android:layout_weight="4"/>-->
-
-    <!--</LinearLayout>-->
-
-</LinearLayout>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/keyboard_image_btn"
+                android:src="@drawable/ic_keyboard_black_48dp"/>
+        </LinearLayout>
+</RelativeLayout>
