--- a/app/src/main/res/layout/activity_interaction_settings.xml
+++ b/app/src/main/res/layout/activity_interaction_settings.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.eyssyapps.utilities_suite.activities.deviceinteraction.InteractionSettingsActivity"
+    tools:context="com.zagorapps.utilities_suite.activities.deviceinteraction.InteractionSettingsActivity"
     android:orientation="vertical"
     >
 
