--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,10 @@
                 android:layout_gravity="right"
                 android:padding="@dimen/default_component_padding"/>
 
+            <Button android:id="@+id/toolbar_test_button"
+                android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                android:text="Proto"/>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
