--- a/app/src/main/res/layout/content_device_interaction_system.xml
+++ b/app/src/main/res/layout/content_device_interaction_system.xml
@@ -5,4 +5,42 @@
               android:layout_height="match_parent"
               android:id="@+id/content_device_interaction_system">
 
+    <android.support.v7.widget.CardView
+        android:layout_margin="8px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_margin="8px"
+                android:text="Volume Control"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"/>
+
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/seekBar_systemVolume"
+                android:layout_margin="8px"
+                android:max="100"/>
+
+            <ToggleButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/toggleButton_systemVolumeMute"
+                android:layout_margin="8px"
+                android:textOn="Unmute"
+                android:textOff="Mute"/>
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
 </LinearLayout>
