Making qr code scanner action available via the main activities toolbar (if BT is enabled)

--- a/app/src/main/res/layout/activity_qr_code_scanner.xml
+++ b/app/src/main/res/layout/activity_qr_code_scanner.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.zagorapps.utilities_suite.activities.prototypes.ConnectoViaQrCode"
+    tools:context="com.zagorapps.utilities_suite.activities.QrCodeScannerActivity"
     android:fitsSystemWindows="true"
     android:id="@+id/scannerContainer"
     android:orientation="horizontal"
