--- a/app/src/main/res/layout/content_device_interaction_voice.xml
+++ b/app/src/main/res/layout/content_device_interaction_voice.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/tap_on_mic"
+            android:text="@string/action_tap_microphone"
             android:textColor="@color/black"
             android:textSize="15dp"
             android:textStyle="normal" />
