--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,13 +4,19 @@
       tools:context=".activities.MainActivity">
 
     <item
-        android:id="@+id/action_clear_bonded_devices"
+        android:id="@+id/action_connect_using_qr_code"
         android:orderInCategory="100"
+        android:title="@string/action_connect_using_qr_code"
+        android:icon="@drawable/ic_fullscreen_white_48dp"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_clear_bonded_devices"
+        android:orderInCategory="200"
         android:title="@string/action_clear_bonded_devices"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_clear_preferences"
-        android:orderInCategory="200"
+        android:orderInCategory="300"
         android:title="@string/action_clear_preferences"
         app:showAsAction="never"/>
 </menu>
