--- a/app/src/main/res/layout/content_device_interaction_system.xml
+++ b/app/src/main/res/layout/content_device_interaction_system.xml
@@ -6,7 +6,8 @@
               android:id="@+id/content_device_interaction_system">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="8px"
+        android:padding="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -16,31 +17,62 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_margin="8px"
+                android:layout_margin="16dp"
                 android:text="Volume Control"
                 android:textAlignment="center"
+                android:textSize="18dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView"/>
+                android:layout_height="wrap_content" />
 
             <SeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/seekBar_systemVolume"
-                android:layout_margin="8px"
-                android:max="100"/>
+                android:padding="16dp"
+                android:max="100" />
 
             <ToggleButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/toggleButton_systemVolumeMute"
-                android:layout_margin="8px"
+                android:layout_margin="8dp"
                 android:textOn="Unmute"
-                android:textOff="Mute"/>
-        </LinearLayout>
+                android:textOff="Mute" />
 
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_margin="16dp"
+                android:text="Screen Brightness"
+                android:textAlignment="center"
+                android:textSize="18dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/seekBar_screenBrightness"
+                android:padding="16dp"
+                android:max="100"/>
+
+        </LinearLayout>
+
+
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
