--- a/app/src/main/res/layout/content_device_interaction_system.xml
+++ b/app/src/main/res/layout/content_device_interaction_system.xml
@@ -75,4 +75,19 @@
 
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp">
+
+        <Button
+            android:id="@+id/button_showFilePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="File Picker">
+        </Button>
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
