--- a/app/src/main/res/layout/content_device_interaction_system.xml
+++ b/app/src/main/res/layout/content_device_interaction_system.xml
@@ -1,93 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/content_device_interaction_system">
-
-    <android.support.v7.widget.CardView
-        android:padding="8dp"
-        android:layout_marginBottom="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:id="@+id/content_device_interaction_system">
 
-            <TextView
-                android:layout_margin="16dp"
-                android:text="Volume Control"
-                android:textAlignment="center"
-                android:textSize="18dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
 
-            <SeekBar
+        <android.support.v7.widget.CardView
+            android:padding="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/seekBar_systemVolume"
-                android:padding="16dp"
-                android:max="100" />
+                android:orientation="vertical">
 
-            <ToggleButton
+                <TextView
+                    android:layout_margin="8dp"
+                    android:text="Machine State"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:layout_margin="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/imageBtn_lock"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_margin="8dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_lock_outline_black_48dp"
+                        android:background="?attr/selectableItemBackgroundBorderless" />
+
+                    <ImageButton
+                        android:id="@+id/imageBtn_restart"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_margin="8dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_autorenew_black_48dp"
+                        android:background="?attr/selectableItemBackgroundBorderless" />
+
+                    <ImageButton
+                        android:id="@+id/imageBtn_shutdown"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_margin="8dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_power_settings_new_black_48dp"
+                        android:background="?attr/selectableItemBackgroundBorderless" />
+
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:padding="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/toggleButton_systemVolumeMute"
-                android:layout_margin="8dp"
-                android:textOn="Unmute"
-                android:textOff="Mute" />
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_margin="8dp"
+                    android:text="Volume Control"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-    </android.support.v7.widget.CardView>
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/seekBar_systemVolume"
+                    android:padding="16dp"
+                    android:max="100" />
 
-    <android.support.v7.widget.CardView
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+                <ToggleButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/toggleButton_systemVolumeMute"
+                    android:layout_margin="8dp"
+                    android:textOn="Unmute"
+                    android:textOff="Mute" />
 
-        <LinearLayout
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="16dp">
 
-            <TextView
-                android:layout_margin="16dp"
-                android:text="Screen Brightness"
-                android:textAlignment="center"
-                android:textSize="18dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <SeekBar
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/seekBar_screenBrightness"
-                android:padding="16dp"
-                android:max="100"/>
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_margin="8dp"
+                    android:text="Screen Brightness"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/seekBar_screenBrightness"
+                    android:padding="16dp"
+                    android:max="100"/>
+
+            </LinearLayout>
 
 
 
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
-
-        <Button
-            android:id="@+id/button_showFilePicker"
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="File Picker">
-        </Button>
+            android:layout_marginBottom="16dp">
 
-    </android.support.v7.widget.CardView>
+            <Button
+                android:id="@+id/button_showFilePicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="File Picker"
+                android:layout_margin="8dp">
+            </Button>
 
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</ScrollView>
+
