--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryLight">#4d63dc</color>
     <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#0052ce</color>
+    <!--<color name="colorAccent">#FF4081</color>-->
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="bg_gradient_start">#31244e</color>
