--- a/app/src/main/res/layout/content_device_interaction_system.xml
+++ b/app/src/main/res/layout/content_device_interaction_system.xml
@@ -135,9 +135,8 @@
 
             </LinearLayout>
 
-
-
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:padding="8dp"
             android:layout_width="match_parent"
@@ -149,6 +148,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="File Picker"
+                android:layout_margin="8dp">
+            </Button>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:padding="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp">
+
+            <Button
+                android:id="@+id/button_start_clipboard_manager_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Clipboard Manager"
                 android:layout_margin="8dp">
             </Button>
 
