Remove old TODO; update drawable icons with different pixel densities.

--- a/app/src/main/res/layout/content_device_interaction_voice.xml
+++ b/app/src/main/res/layout/content_device_interaction_voice.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:src="@drawable/ic_mic_white_48dp"
+            android:src="@drawable/ic_mic_white"
             app:backgroundTint="@color/colorPrimaryLight" />
 
         <TextView
