--- a/app/src/main/res/layout/activity_interaction_settings.xml
+++ b/app/src/main/res/layout/activity_interaction_settings.xml
@@ -68,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/save_settings_button"
-            android:src="@drawable/ic_save_black_48dp"
+            android:src="@drawable/ic_save_black"
             android:layout_gravity="center"/>
 
     </android.support.v7.widget.CardView>
