--- a/app/src/main/res/layout/content_copied_clipboard_item.xml
+++ b/app/src/main/res/layout/content_copied_clipboard_item.xml
@@ -10,23 +10,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical" />
 
-    <TextView
-        android:text="Sample"
+    <EditText
         android:id="@+id/text_time_copied"
         android:maxEms="20"
         android:layout_gravity="center_vertical"
         android:layout_width="0dp"
+        android:hint="Description"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
 
     <ImageButton
+        android:layout_marginStart="8dp"
         android:id="@+id/imageBtn_view_clip_contents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_more_horiz"
-        android:background="?attr/selectableItemBackgroundBorderless"/>
+        android:background="?attr/selectableItemBackgroundBorderless" />
 
 </LinearLayout>
